[gd_scene load_steps=11 format=3 uid="uid://b4d2gtpcmcylb"]

[ext_resource type="Theme" uid="uid://c7u2g7u3nqj0w" path="res://game/ui/theme/ui_theme.tres" id="1_embh5"]
[ext_resource type="Script" uid="uid://cqdjacyavuyrv" path="res://game/ui/hotbar_slot/hotbar_slot.gd" id="1_slot"]
[ext_resource type="Texture2D" uid="uid://uwobfdsiqqh6" path="res://assets/ui/buttons/wood_button_normal.png" id="3_exxhf"]
[ext_resource type="Texture2D" uid="uid://jkbvrap153oh" path="res://assets/ui/buttons/wood_button_pressed.png" id="3_f8s2m"]
[ext_resource type="LabelSettings" uid="uid://dr461kr0eamd7" path="res://game/ui/theme/label_settings_small.tres" id="3_lcaog"]
[ext_resource type="Texture2D" uid="uid://bhdwp06yambb8" path="res://assets/ui/panels/wood_panel.png" id="5_8bs3e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f8s2m"]
texture = ExtResource("3_exxhf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_exxhf"]
content_margin_top = 2.0
texture = ExtResource("3_f8s2m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_14uua"]
content_margin_left = 1.0
content_margin_top = 0.0
content_margin_right = 1.0
content_margin_bottom = 1.0
texture = ExtResource("5_8bs3e")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0
axis_stretch_vertical = 2
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cmq11"]

[node name="HotbarSlot" type="PanelContainer"]
offset_right = 20.0
offset_bottom = 20.0
theme = ExtResource("1_embh5")
theme_override_styles/panel = SubResource("StyleBoxTexture_f8s2m")
script = ExtResource("1_slot")
normal_panel_style = SubResource("StyleBoxTexture_f8s2m")
selected_panel_style = SubResource("StyleBoxTexture_exxhf")
preview_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HotkeyLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/line_spacing = 3
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_14uua")
text = "1"
label_settings = ExtResource("3_lcaog")

[node name="CountLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("1_embh5")
theme_override_styles/normal = SubResource("StyleBoxTexture_cmq11")
label_settings = ExtResource("3_lcaog")
horizontal_alignment = 2
vertical_alignment = 2

[node name="LockedLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
modulate = Color(1, 1, 1, 0.4)
text = "X"
label_settings = ExtResource("3_lcaog")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
